# ComputerVisionCuda

./: .gitignore  CMakeLists.txt  CodingAssignment_aerdogan.cpp  CompVis.cpp  CompVis.h  CompVisTest.cpp  README.md  main.cpp
backup/: CompVis.h
prebuilt/: ComputerVisionCuda_debug_openmp  ComputerVisionCuda_debug_singlethread  ComputerVisionCuda_openmp  ComputerVisionCuda_singlethread
reports/NsightComputeProfiler/: ComputerVisionCuda.ncu-rep  Project 1.qdproj  Report 1.nsys-rep
src/: main.cpp
src/cpu/: CompVis.cpp  CompVis.h  main.cpp
src/cuda/: ComputerVisionCuda.sln
src/cuda/ComputerVisionCuda/: ComputerVisionCuda.vcxproj  kernel.cu
src/cuda/ComputerVisionCuda/ARM/Release/: kernel.cu.cache  kernel.cu2040320647.deps
src/cuda/ComputerVisionCuda/ARM/Release/Computer.CC87CD3C.tlog/: ComputerVisionCuda.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog
src/cuda/ComputerVisionCuda/x64/Debug/: ComputerVisionCuda.exe.recipe  ComputerVisionCuda.ilk  kernel.cu.cache  kernel.cu2040320647.deps
src/cuda/ComputerVisionCuda/x64/Debug/Computer.CC87CD3C.tlog/: ComputerVisionCuda.lastbuildstate  ComputerVisionCuda.write.1u.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/cuda/ComputerVisionCuda/x64/Release/: ComputerVisionCuda.exe.recipe  kernel.cu.cache  kernel.cu2040320647.deps
src/cuda/ComputerVisionCuda/x64/Release/Computer.CC87CD3C.tlog/: ComputerVisionCuda.lastbuildstate  ComputerVisionCuda.write.1u.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/cuda/x64/Debug/: ComputerVisionCuda.exp  ComputerVisionCuda.lib
src/cuda/x64/Release/: ComputerVisionCuda.exp
